# Metropolitan

./: CMakeLists.txt  CMakeSettings.json  MetroGenetic.ipynb  MetroGenetic1.ipynb  Metropolitan.py.ipynb  README.md  prova.cpp  prova.txt
GA/: CMakeLists.txt
Grafica/: CMakeLists.txt  CMakeProject1.cpp  Grafica.cpp
Grafica/include/datiInput/: datiInput.h
Grafica/include/glad/: glad.h
Grafica/include/manager/: manager.h
Grafica/include/shader/: shader.h
Grafica/shaders/: CMakeLists.txt  fragment
Grafica/src/: datiInput.cpp  glad.c  manager.cpp  shader.cpp  texture.cpp
Images/: CMakeLists.txt
outputGA/: CMakeLists.txt  outputMatrice.txt  outputMatrice5x7.txt  outputMatrice7x8.txt  outputMatrice8x7.txt
test/: outputMatrice7x6.txt
